# alt.c

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  make.sh  requirements.txt
alt/: base.py  general.py  loader.py  logger.py  magic.py  parameters.py  spm-to-alt.py  tensors.py  tokenizer.py
alt/convert/: mistral.py  spm.py
alt/inspect/: hash.py  spm.py  torch.py
alt/validate/: spm.py
docs/: README.md  quantization-error-free-modeling.md  quantization-for-large-language-models.md  quantization-modeling-q8.md  quantization-modeling.md
docs/kb/: python.md
docs/models/: mistral.md  mnist.md  specification.md
docs/quantization/: q8-modeling.md
examples/: CMakeLists.txt  compare_float.c  data_types.c  flex_array.c  perceptron.c  q4row.c  q8.c  q8.py  q8row.c  qk8.c  qk8.py  random.c  tensor.c  tensors.c
examples/algorithm/: CMakeLists.txt  hash.c
examples/interface/: CMakeLists.txt  flex_array.c  flex_string.c
examples/interface/data_types/: CMakeLists.txt  fp8.py  q8.py  qlog.c  types.c
examples/interface/path/: CMakeLists.txt  info.c
examples/models/: CMakeLists.txt  mistral.c  mlp.c  mnist.c  perceptron.c  similarity.c  tokenizer.c  xor.c
examples/path/: CMakeLists.txt  base.c  entry.c  info.c  join.c  list.c  traverse.c
examples/quants/: CMakeLists.txt  fp8.c  q4row.c  q8row.c
examples/scratchpad/: CMakeLists.txt  array.c  char.c  hmap.c  matrix.c  pre_tokenize.c  random.c  u8proc.c  utf8.c
examples/vk/: CMakeLists.txt  command.c  device.c  instance.c  shader.c  simple.c
include/: activation.h  data_types.h  flex_array.h  logger.h  magic.h  path.h  random.h  tensors.h  threads.h
include/algorithm/: binary_tree.h  hash.h  hash_table.h  key_value_pair.h
include/interface/: activation.h  data_types.h  flex_array.h  flex_string.h  float_is_close.h  hash.h  logger.h  path.h  random.h  unit_test.h
include/magic/: file.h  mistral.h  model.h
include/model/: bpe.h  file.h  magic.h  mistral.h  mlp.h  tokenizer.h  word2vec.h
include/vk/: device.h  instance.h  shader.h
scripts/: asan.sh  make.sh  torch.sh
shaders/: dot_product.comp  sum.comp  test.comp
src/: activation.c  alt.c  data_types.c  flex_array.c  magic.c  path.c  random.c  tensors.c  threads.c
src/algorithm/: binary_tree.c  hash.c  hash_table.c
src/interface/: activation.c  data_types.c  flex_array.c  flex_string.c  float_is_close.c  hash.c  logger.c  path.c  random.c  unit_test.c
src/magic/: file.c
src/model/: bpe.c  file.c  magic.c  mistral.c  mlp.c  tokenizer.c  word2vec.c
src/vk/: device.c  instance.c  shader.c
tests/: CMakeLists.txt  test_activation.c  test_flex_array.c  test_flex_string.c  test_float_is_close.c  test_logger.c
